fix grid wrapper height on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -386,7 +386,7 @@ body {
   }
 
   .grid-wrapper {
-    height: 1488px;
+    height: 100%;
   }
 
 }
